--- a/frontend/src/components/parishAdmin/layout/adminSidebar/AdminSidebar.scss
+++ b/frontend/src/components/parishAdmin/layout/adminSidebar/AdminSidebar.scss
@@ -8,7 +8,7 @@
   .admin-hamburger-menu {
     position: absolute;
     top: 1rem;
-    left: 1rem;
+    right: 1rem;
     font-size: $afs;
     z-index: 9999;
   }
