--- a/frontend/src/styles/Variables.scss
+++ b/frontend/src/styles/Variables.scss
@@ -35,7 +35,7 @@ $lfw: 800;
 $navbar-bg: #97c3e7;
 $header: #f0f8ff;
 $mobile-header-bg: #c77dff;
-$priest-header-bg: #e6e6facc;
+$priest-header-bg: #dc97ff;
 $main-bg: #f8f8ff;
 $section-bg: #ebf2fa;
 $aside-bg: #f0f8ff;
