--- a/frontend/src/views/financePages/financeManagerPage/FinanceManagerPage.scss
+++ b/frontend/src/views/financePages/financeManagerPage/FinanceManagerPage.scss
@@ -72,8 +72,18 @@
 
 /* Between 1025px and 1200px (standard desktops) */
 @media (min-width: 1025px) and (max-width: 1200px) {
+  .financial-manager-page {
+    .financial-manager-page-container {
+      min-height: 100vh;
+    }
+  }
 }
 
 /* 1201px and up (large desktop and TV screens) */
 @media (min-width: 1201px) {
+  .financial-manager-page {
+    .financial-manager-page-container {
+      min-height: 100vh;
+    }
+  }
 }
