--- a/frontend/src/components/financeManager/financeManagerSidebar/FinanceMgtSidebar.scss
+++ b/frontend/src/components/financeManager/financeManagerSidebar/FinanceMgtSidebar.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/Variables.scss";
 @import "../../../styles/Mixins.scss";
 
-.finance-manager-dashboard-sidebar-container{
+.finance-manager-dashboard-sidebar-container {
   width: 16%;
   background-color: $sidebar-bg;
 
@@ -93,7 +93,6 @@
 /* Up to 480px (very small mobile screens) */
 @media (max-width: 480px) {
   .finance-manager-dashboard-sidebar-container {
-  
     .finance-manager-dashboard-sidebar-wrapper {
       display: none;
     }
@@ -103,7 +102,6 @@
 /* Between 481px and 768px (common for most mobile devices) */
 @media (min-width: 481px) and (max-width: 768px) {
   .finance-manager-dashboard-sidebar-container {
-   
     .finance-manager-dashboard-sidebar-wrapper {
       display: none;
     }
@@ -113,7 +111,6 @@
 /* Between 769px and 1024px (ideal for tablets and small laptops) */
 @media (min-width: 769px) and (max-width: 1024px) {
   .finance-manager-dashboard-sidebar-container {
-   
     .finance-manager-dashboard-sidebar-wrapper {
       display: none;
     }
@@ -122,14 +119,20 @@
 
 /* Between 1025px and 1200px (standard desktops) */
 @media (min-width: 1025px) and (max-width: 1200px) {
-  .finance-manager-hamburger-menu {
-    display: none;
+  .finance-manager-dashboard-sidebar-container {
+    min-height: 100vh;
+    .finance-manager-hamburger-menu {
+      display: none;
+    }
   }
 }
 
 /* 1201px and up (large desktop and TV screens) */
 @media (min-width: 1201px) {
-  .finance-manager-hamburger-menu {
-    display: none;
+  .finance-manager-dashboard-sidebar-container {
+    min-height: 100vh;
+    .finance-manager-hamburger-menu {
+      display: none;
+    }
   }
 }
